--- a/config.yaml
+++ b/config.yaml
@@ -11,17 +11,8 @@ contracts:
     - event: MessageReceived(address indexed caller, uint32 sourceDomain, uint64 indexed nonce, bytes32 sender, bytes messageBody)
 
 networks:
-- id: 8453
-  start_block: 32270286
-  contracts:
-  - name: TokenMessenger
-    address:
-    - 0x1682Ae6375C4E4A97e4B583BC394c861A46D8962
-  - name: MessageTransmitter
-    address:
-    - 0xAD09780d193884d503182aD4588450C416D6F9D4
-- id: 1
-  start_block: 22803638
+- id: 1  # Ethereum
+  start_block: 22864921
   contracts:
   - name: TokenMessenger
     address:
@@ -29,6 +20,42 @@ networks:
   - name: MessageTransmitter
     address:
     - 0x0a992d191DEeC32aFe36203Ad87D7d289a738F81
+- id: 10  # OP Mainnet
+  start_block: 138131801
+  contracts:
+  - name: TokenMessenger
+    address:
+    - 0x2B4069517957735bE00ceE0fadAE88a26365528f
+  - name: MessageTransmitter
+    address:
+    - 0x4D41f22c5a0e5c74090899E5a8Fb597a8842b3e8
+- id: 42161  # Arbitrum
+  start_block: 355077971
+  contracts:
+  - name: TokenMessenger
+    address:
+    - 0x19330d10D9Cc8751218eaf51E8885D058642E08A
+  - name: MessageTransmitter
+    address:
+    - 0xC30362313FBBA5cf9163F0bb16a0e01f01A896ca
+- id: 8453  # Base
+  start_block: 32536517
+  contracts:
+  - name: TokenMessenger
+    address:
+    - 0x1682Ae6375C4E4A97e4B583BC394c861A46D8962
+  - name: MessageTransmitter
+    address:
+    - 0xAD09780d193884d503182aD4588450C416D6F9D4
+- id: 130  # Unichain
+  start_block: 21114021
+  contracts:
+  - name: TokenMessenger
+    address:
+    - 0x4e744b28E787c3aD0e810eD65A24461D4ac5a762
+  - name: MessageTransmitter
+    address:
+    - 0x353bE9E2E38AB1D19104534e4edC21c643Df86f4
 
 field_selection:
   transaction_fields:
