--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,18 @@ contracts:
   handler: src/EventHandlers.ts
   events:
     - event: DepositForBurn(uint64 indexed nonce, address indexed burnToken, uint256 amount, address indexed depositor, bytes32 mintRecipient, uint32 destinationDomain, bytes32 destinationTokenMessenger, bytes32 destinationCaller)
+- name: TokenMessengerV2
+  handler: src/EventHandlers.ts
+  events:
+    - event: DepositForBurn(address indexed burnToken, uint256 amount, address indexed depositor, bytes32 mintRecipient, uint32 destinationDomain, bytes32 destinationTokenMessenger, bytes32 destinationCaller, uint256 maxFee, uint32 indexed minFinalityThreshold, bytes hookData)
 - name: MessageTransmitter
   handler: src/EventHandlers.ts
   events:
     - event: MessageReceived(address indexed caller, uint32 sourceDomain, uint64 indexed nonce, bytes32 sender, bytes messageBody)
+- name: MessageTransmitterV2
+  handler: src/EventHandlers.ts
+  events:
+    - event: MessageReceived(address indexed caller, uint32 sourceDomain, bytes32 indexed nonce, bytes32 sender, uint32 indexed finalityThresholdExecuted, bytes messageBody)
 
 networks:
 - id: 1  # Ethereum
@@ -17,45 +25,93 @@ networks:
   - name: TokenMessenger
     address:
     - 0xBd3fa81B58Ba92a82136038B25aDec7066af3155
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
   - name: MessageTransmitter
     address:
     - 0x0a992d191DEeC32aFe36203Ad87D7d289a738F81
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
 - id: 10  # OP Mainnet
   start_block: 138131801
   contracts:
   - name: TokenMessenger
     address:
     - 0x2B4069517957735bE00ceE0fadAE88a26365528f
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
   - name: MessageTransmitter
     address:
     - 0x4D41f22c5a0e5c74090899E5a8Fb597a8842b3e8
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
 - id: 42161  # Arbitrum
   start_block: 355077971
   contracts:
   - name: TokenMessenger
     address:
     - 0x19330d10D9Cc8751218eaf51E8885D058642E08A
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
   - name: MessageTransmitter
     address:
     - 0xC30362313FBBA5cf9163F0bb16a0e01f01A896ca
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
 - id: 8453  # Base
   start_block: 32536517
   contracts:
   - name: TokenMessenger
     address:
     - 0x1682Ae6375C4E4A97e4B583BC394c861A46D8962
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
   - name: MessageTransmitter
     address:
     - 0xAD09780d193884d503182aD4588450C416D6F9D4
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
 - id: 130  # Unichain
   start_block: 21114021
   contracts:
   - name: TokenMessenger
     address:
     - 0x4e744b28E787c3aD0e810eD65A24461D4ac5a762
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
   - name: MessageTransmitter
     address:
     - 0x353bE9E2E38AB1D19104534e4edC21c643Df86f4
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
+- id: 59144  # Linea (CCTPv2 only)
+  start_block: 20646338
+  contracts:
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
+- id: 480  # World Chain (CCTPv2 only)
+  start_block: 16267833
+  contracts:
+  - name: TokenMessengerV2
+    address:
+    - 0x28b5a0e9C621a5BadaA536219b3a228C8168cf5d
+  - name: MessageTransmitterV2
+    address:
+    - 0x81D40F21F12A8F0E3252Bccb954D722d4c464B64
 
 field_selection:
   transaction_fields:
