--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "envio start",
     "test": "pnpm mocha",
     "tui": "tsx tui.ts",
-    "tui:watch": "tsx watch tui.ts"
+    "tui:watch": "tsx watch tui.ts",
+    "lzTui": "tsx lzTui.ts",
+    "lzTui:watch": "tsx watch lzTui.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
