--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
     "codegen": "envio codegen",
     "dev": "envio dev",
     "start": "envio start",
-    "test": "pnpm mocha",
-    "tui": "tsx tui.ts",
-    "tui:watch": "tsx watch tui.ts",
-    "lzTui": "tsx lzTui.ts",
-    "lzTui:watch": "tsx watch lzTui.ts",
-    "lz1-feed": "node scripts/lz1-feed.js",
-    "agglayer-stats": "tsx agglayer-stats.ts"
+    "test": "pnpm mocha"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
@@ -24,13 +18,10 @@
     "ts-mocha": "^10.0.0",
     "typescript": "5.2.2",
     "chai": "4.3.10",
-    "mocha": "10.2.0",
-    "tsx": "^4.19.2"
+    "mocha": "10.2.0"
   },
   "dependencies": {
-    "envio": "2.25.0",
-    "graphql-request": "^6.1.0",
-    "chalk": "^4.1.2"
+    "envio": "2.26.0"
   },
   "optionalDependencies": {
     "generated": "./generated"
