--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,18 @@
 # yaml-language-server: $schema=./node_modules/envio/evm.schema.json
 name: envio-indexer
 contracts:
-- name: L1AssetRouter
+- name: L2AssetRouter
   handler: src/EventHandlers.ts
   events:
+  - event: AssetDeploymentTrackerRegistered(bytes32 indexed assetId, bytes32 indexed additionalData, address assetDeploymentTracker)
+  - event: AssetHandlerRegistered(bytes32 indexed assetId, address indexed _assetHandlerAddress)
   - event: BridgehubDepositBaseTokenInitiated(uint256 indexed chainId, address indexed from, bytes32 assetId, uint256 amount)
-  - event: BridgehubDepositFinalized(uint256 indexed chainId, bytes32 indexed txDataHash, bytes32 indexed l2DepositTxHash)
   - event: BridgehubDepositInitiated(uint256 indexed chainId, bytes32 indexed txDataHash, address indexed from, bytes32 assetId, bytes bridgeMintCalldata)
-  - event: ClaimedFailedDepositAssetRouter(uint256 indexed chainId, bytes32 indexed assetId, bytes assetData)
+  - event: BridgehubWithdrawalInitiated(uint256 chainId, address indexed sender, bytes32 indexed assetId, bytes32 assetDataHash)
   - event: DepositFinalizedAssetRouter(uint256 indexed chainId, bytes32 indexed assetId, bytes assetData)
-  - event: LegacyDepositInitiated(uint256 indexed chainId, bytes32 indexed l2DepositTxHash, address indexed from, address to, address l1Token, uint256 amount)
+  - event: Paused(address account)
+  - event: Unpaused(address account)
+  - event: WithdrawalInitiatedAssetRouter(uint256 chainId, address indexed l2Sender, bytes32 indexed assetId, bytes assetData)
 networks:
 - id: 1
   start_block: 23006299
@@ -17,10 +20,31 @@ networks:
   - name: L1AssetRouter
     address:
     - 0x8829AD80E425C646DAB305381ff105169FeEcE56
+    handler: src/EventHandlers.ts
+    events:
+    - event: AssetDeploymentTrackerRegistered(bytes32 indexed assetId, bytes32 indexed additionalData, address assetDeploymentTracker)
+    - event: AssetDeploymentTrackerSet(bytes32 indexed assetId, address indexed assetDeploymentTracker, bytes32 indexed additionalData)
+    - event: AssetHandlerRegistered(bytes32 indexed assetId, address indexed _assetHandlerAddress)
+    - event: BridgehubDepositBaseTokenInitiated(uint256 indexed chainId, address indexed from, bytes32 assetId, uint256 amount)
+    - event: BridgehubDepositFinalized(uint256 indexed chainId, bytes32 indexed txDataHash, bytes32 indexed l2DepositTxHash)
+    - event: BridgehubDepositInitiated(uint256 indexed chainId, bytes32 indexed txDataHash, address indexed from, bytes32 assetId, bytes bridgeMintCalldata)
+    - event: BridgehubMintData(bytes bridgeMintData)
+    - event: BridgehubWithdrawalInitiated(uint256 chainId, address indexed sender, bytes32 indexed assetId, bytes32 assetDataHash)
+    - event: ClaimedFailedDepositAssetRouter(uint256 indexed chainId, bytes32 indexed assetId, bytes assetData)
+    - event: DepositFinalizedAssetRouter(uint256 indexed chainId, bytes32 indexed assetId, bytes assetData)
+    - event: LegacyDepositInitiated(uint256 indexed chainId, bytes32 indexed l2DepositTxHash, address indexed from, address to, address l1Token, uint256 amount)
+    - event: Paused(address account)
+    - event: Unpaused(address account)
 - id: 324
   start_block: 63394479
   contracts:
-  - name: L1AssetRouter
+  - name: L2AssetRouter
+    address:
+    - '0x0000000000000000000000000000000000010003'
+- id: 2741
+  start_block: 15349559
+  contracts:
+  - name: L2AssetRouter
     address:
     - '0x0000000000000000000000000000000000010003'
 unordered_multichain_mode: true
