--- a/config.yaml
+++ b/config.yaml
@@ -48,3 +48,8 @@ networks:
     address:
     - '0x0000000000000000000000000000000000010003'
 unordered_multichain_mode: true
+field_selection:
+  transaction_fields:
+    - "hash"
+    - "from"
+    - "to"
