--- a/config.yaml
+++ b/config.yaml
@@ -8,49 +8,49 @@ contracts:
   - event: FilledV3Relay(address inputToken, address outputToken, uint256 inputAmount, uint256 outputAmount, uint256 repaymentChainId, uint256 indexed originChainId, uint32 indexed depositId, uint32 fillDeadline, uint32 exclusivityDeadline, address exclusiveRelayer, address indexed relayer, address depositor, address recipient, bytes message, (address,bytes,uint256,uint8) relayExecutionInfo)
   - event: FundsDeposited(bytes32 inputToken, bytes32 outputToken, uint256 inputAmount, uint256 outputAmount, uint256 indexed destinationChainId, uint256 indexed depositId, uint32 quoteTimestamp, uint32 fillDeadline, uint32 exclusivityDeadline, bytes32 indexed depositor, bytes32 recipient, bytes32 exclusiveRelayer, bytes message)
 networks:
-- id: 1
+- id: 1 # etherium
   start_block: 23102140
   contracts:
   - name: SpokePool
     address:
     - 0x5c7BCd6E7De5423a257D81B442095A1a6ced35C5
-- id: 42161
+- id: 42161 # arbitrum
   start_block: 366538029
   contracts:
   - name: SpokePool
     address:
     - 0xe35e9842fceaCA96570B734083f4a58e8F7C5f2A
-- id: 10
+- id: 10 # opmainnet
   start_block: 139563673
   contracts:
   - name: SpokePool
     address:
     - 0x6f26Bf09B1C792e3228e5467807a900A503c0281
-- id: 324
+- id: 324 # zksyncera
   start_block: 63857674
   contracts:
   - name: SpokePool
     address:
     - 0xE0B015E54d54fc84a6cB9B666099c46adE9335FF
-- id: 8453
+- id: 8453 # base
   start_block: 33968388
   contracts:
   - name: SpokePool
     address:
     - 0x09aea4b2242abC8bb4BB78D537A67a245A7bEC64
-- id: 57073
+- id: 57073 # ink
   start_block: 21228108
   contracts:
   - name: SpokePool
     address:
     - 0xeF684C38F94F48775959ECf2012D7E864ffb9dd4
-- id: 59144
+- id: 59144 # linea
   start_block: 21808495
   contracts:
   - name: SpokePool
     address:
     - 0x7E63A5f1a8F0B4d0934B2f2327DAED3F6bb2ee75
-- id: 534352
+- id: 534352 # scroll
   start_block: 18734126
   contracts:
   - name: SpokePool
