--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@types/chai": "^4.3.11",
     "@types/mocha": "10.0.6",
     "@types/node": "20.8.8",
-    "ts-mocha": "^10.0.0",
-    "typescript": "5.2.2",
     "chai": "4.3.10",
-    "mocha": "10.2.0"
+    "mocha": "10.2.0",
+    "ts-mocha": "^10.0.0",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "envio": "2.26.0"
+    "envio": "2.26.0",
+    "viem": "^2.33.3"
   },
   "optionalDependencies": {
     "generated": "./generated"
